needa fix accidental output

--- a/lesson1-application-malaria-detection.ipynb
+++ b/lesson1-application-malaria-detection.ipynb
@@ -11,22 +11,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The general approach to classification of images upon the Malaria dataset was taken from lesson 1 of fastai v3 of the courses on Deep Learning.\n",
+    "#### Introduction\n",
+    "Applying deep learning to healthcare is one of the many powerful applications that can be utilized for the overall benefit of society. \n",
     "\n",
-    "The goal is to see how practical and successful the fastai framework is when applied to a kaggle dataset. I particularly chose a Malaria Images dataset because I am interested in the applications of deep learning for medical practices\n",
+    "The goal of this notebook is to see how effective the fastai framework is when applied to image classification. To do so, we will train a model to classify cell images as either **Uninfected** or **Parasitized** with **Malaria**.\n",
     "\n",
+    "#### Input Data\n",
+    "The dataset was originally uploaded at the NIH's website: https://ceb.nlm.nih.gov/repositories/malaria-datasets/. However, data was read from Kaggle stored in this [location](https://www.kaggle.com/iarunava/cell-images-for-detecting-malaria/home) using Kaggle's APIs.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Method\n",
     "We will begin creating a neural network that classifies cell images as either \"Parasitized\" with Malaria, or \"Uninfected.\"\n",
     "\n",
-    "The approach can be summarized as:\n",
-    "1. Create a data object to prepare data for modelling\n",
-    "2. Use create_cnn() to create a learn object\n",
-    "3. Use the learn object to fit model\n",
-    "4. Interpret Results\n",
-    "5. Fine tune model by unfreezing, finding learning rates (LRs), and applying differential LRs.\n",
-    "6. Interpret results\n",
-    "7. Compare models from steps 1-3 and steps 5\n",
+    "The approach can be summarized by the following steps:\n",
+    "1. Create a **data object** to prepare data for modelling\n",
+    "2. Use create_cnn() to create a **learner object**\n",
+    "3. Use the learner object to **fit model**\n",
+    "4. **Interpret** Results\n",
+    "5. **Fine tune** model by unfreezing, finding optimal learning rates (LRs), and applying differential LRs.\n",
+    "6. **Interpret** results\n",
+    "7. **Compare** models from steps 1-3 and steps 5\n",
     "\n",
-    "Results: By the end of this process, the convolutional neural network was able to classify images as Uninfected or Infected with **97.3% accuracy**.\n"
+    "#### Results\n",
+    "By the end of this process, the convolutional neural network was able to classify images as *Uninfected* or *Parasitized* with **97.3% accuracy**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 0.0: Setup"
    ]
   },
   {
@@ -67,12 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bs = 64\n",
-    "# bs = 16   # uncomment this line if you run out of memory even after clicking Kernel->Restart"
+    "bs = 64"
    ]
   },
   {
@@ -106,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 0: Data organization"
+    "## Step 0.1: Data organization"
    ]
   },
   {
@@ -146,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To view what exists with the folder, we call "
+    "To view what exists in the folder, we call "
    ]
   },
   {
@@ -175,7 +190,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the data is labelled by subfolders **Uninfected** and **Parasitized**. So, all images that are classified as *Uninfected* lie within the *Uninfected* folder, and all images classified as *Parasitized* are within the *Parasitized* folder."
+    "As you can see, the data is labelled by subfolders **Uninfected** and **Parasitized**. So, all images that are classified as *Uninfected* lie within the *Uninfected* folder, and all images classified as *Parasitized* are within the *Parasitized* folder.\n",
+    "\n",
+    "*Note*: The /models/ subfolder is a result of calling `learner.save()` in the upcoming code. Before saving your model, this folder should not exist when calling `path.ls()`."
    ]
   },
   {
@@ -189,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to organize our data such that we can train and validate it using `create_cnn()`, we must first create a *data object*. This data object is created using the `ImageDataBunch()`. Further documentation can be found [here](https://docs.fast.ai/vision.data.html#ImageDataBunch).\n",
+    "In order to organize our data such that we can train and validate it using `create_cnn()`, we must first create a *data object*. This data object is created using `ImageDataBunch()`. Further documentation can be found [here](https://docs.fast.ai/vision.data.html#ImageDataBunch).\n",
     "\n",
     "We use `ImageDataBunch.from_folder()` since the classification labels are organized with folders."
    ]
@@ -242,7 +259,7 @@
     "\n",
     "**.normalize(imagenet_stas)** *normalizes* our images. As referenced from the fast.ai course, the RGB channels must have a normalized brightness and variation.\n",
     "\n",
-    "> It really helps train a deep learning model if each one of those red green and blue channels has a mean of zero and a standard deviation of one.\n",
+    "> It really helps train a deep learning model if each one of those red, green, and blue channels have a mean of zero and a standard deviation of one.\n",
     "\n"
    ]
   },
@@ -250,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now take a look at our data using our *data* object."
+    "We can now take a look at our data using our *data object*."
    ]
   },
   {
@@ -290,7 +307,7 @@
    "source": [
     "In order to train our model, we will make use of **Transfer Learning**.\n",
     "\n",
-    "That is, using a model that can efficiently do its job, and making it do whatever it is you would like to do particularly well. In this case, we will use **resnet34** as our pretrained model.\n",
+    "That is, using a model that can efficiently do its job, and applying it to your particular application. This enables the training of neural networks to be faster, and with less data. In this case, we will use **resnet34** as our pretrained model.\n",
     "\n",
     "To train our specific model using a convolutional neural network, we will use the `create_cnn()` function. More info on this function can be found with `doc(create_cnn())`.\n",
     "\n",
@@ -538,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since our model is working as we expect it to, we will *unfreeze* our model and train some more."
+    "We will begin fine tuning our model by first *unfreezing* its layers."
    ]
   },
   {
@@ -553,7 +570,7 @@
    "metadata": {},
    "source": [
     "Explanation:\n",
-    "When we originally trained our model, calling `fit_one_cycle` only fine-tuned extra layers added to the end of our network. \n",
+    "When we originally trained our model, calling `fit_one_cycle` only fine-tuned extra layers were added to the end of our network. \n",
     "\n",
     "The rest of the layers were *frozen*, and left exactly as it was originally. \n",
     "\n",
@@ -635,7 +652,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have a fitted model after unfreezing, we can see if our model improves by loading our originally saved model, and finding the optimal learning rate with `learn.lr_find()`."
+    "In this case, *unfreezing* our model already provided an increase in classification accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have a fitted model after unfreezing, we can see if our model improves by loading our originally saved model, and finding the optimal learning rate with `learn.lr_find()`, and using that optimal learning rate after unfreezing again."
    ]
   },
   {
@@ -664,7 +688,11 @@
     "\n",
     "> It uses the technique developed in the 2015 paper [Cyclical Learning Rates for Training Neural Networks](https://arxiv.org/abs/1506.01186)\n",
     "\n",
-    "In summary, the video points out that after calling `lr_find()`, a very small learning rate is picked, and then the learning rate constantly increases, until the loss starts increasing. When the loss begins increasing, the function stops running and we can then view a plot of learning rates against the loss function with `recorder.plot()`."
+    "In summary, the video points out that after calling `lr_find()`, a very small learning rate is first chosen. Next, the learning rate will constantly increase, in order to find the location of the lowest *Loss*. This positive rate of change in learning rate continues until the loss starts increasing. When the loss begins increasing, the function stops running and we can then view a plot of learning rates against the loss function with `recorder.plot()`.\n",
+    "\n",
+    "What is the the Loss Function?\n",
+    "\n",
+    "It can be summarized as the difference between the actual output and the predicted output.\n"
    ]
   },
   {
@@ -681,7 +709,7 @@
     }
    ],
    "source": [
-    "learn.lr_find()"
+    "learn.lr_find() # call this function to render optimal learning rates"
    ]
   },
   {
@@ -721,9 +749,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calling `?learn.fit_one_cycle` shows that the defauly learning rate used was `.003`.\n",
+    "By looking at the above plot, we can possibly improve our model by choosing a range of learning rates from `1e-5, to 1e-3`. This range was chosen by using a range of rates much smaller than the point at which the loss begins increasing.\n",
     "\n",
-    "We can possibly improve our model by choosing a range of smaller learning rates, from `1e-5, to 1e-3`. This range was chosen after looking at the above plot, using a range of rates much smaller than the point at which the loss begins increasing. \n",
+    "To compare with the learning rate our original model used, we would call `?learn.fit_one_cycle`. This shows that the defauly learning rate used was `.003`. Our new learning rate will be of lower magnitude.\n",
+    "\n",
+    "We will first unfreeze our loaded model, and then call `learn.fit_one_cycle(4, max_lr=slice(1e-5,1e-3))`.\n",
+    "As you can see, we will run `4` epochs, and use a range of learning rates by using the `max_lr` parameter.\n",
     "\n",
     "Let's see our results. "
    ]
@@ -800,9 +831,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'learn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-ca5cb8272ab7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'stage-2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'learn' is not defined"
+     ]
+    }
+   ],
    "source": [
     "learn.save('stage-2')"
    ]
@@ -841,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
