--- a/lesson1-application-malaria-detection.ipynb
+++ b/lesson1-application-malaria-detection.ipynb
@@ -32,7 +32,6 @@
     "4. **Interpret** Results\n",
     "5. **Fine tune** model by unfreezing, finding optimal learning rates (LRs), and applying differential LRs.\n",
     "6. **Interpret** results\n",
-    "7. **Compare** models from steps 1-3 and steps 5\n",
     "\n",
     "#### Results\n",
     "By the end of this process, the convolutional neural network was able to classify images as *Uninfected* or *Parasitized* with **97.3% accuracy**.\n"
@@ -832,9 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
@@ -863,9 +860,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The best results occured after fine tuning the model by unfreezing the layers with `unfreeze`, calling `lr_find` and calling `learn.fit_one_cylce` with `4` epochs, and a range learning rates from `1e-5` to `1e-3`.\n",
+    "The best results (**97.3%**) occured after fine tuning the model by unfreezing the layers with `unfreeze`, calling `lr_find` and calling `learn.fit_one_cylce` with `4` epochs, and a range learning rates from `1e-5` to `1e-3`.\n",
     "\n",
-    "Applying this general coding approach to deep learning in computer vision was an amazing way to learn how to actually apply principles on an actual dataset.\n",
+    "Here are the steps once again that were taken:\n",
+    "1. Create a **data object** to prepare data for modelling\n",
+    "2. Use create_cnn() to create a **learner object**\n",
+    "3. Use the learner object to **fit model**\n",
+    "4. **Interpret** Results\n",
+    "5. **Fine tune** model by unfreezing, finding optimal learning rates (LRs), and applying differential LRs.\n",
     "\n"
    ]
   }
